@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.6745 2007/10/15 07:06:02 wiz Exp $
+$NetBSD: TODO,v 1.6746 2007/10/15 14:08:31 reinoud Exp $
 
 Suggested new packages
 ======================
@@ -1270,7 +1270,6 @@ Suggested package updates
 	o ubs-0.20
 	o ucarp-1.3
 	o ucblogo-5.5
-	o udfclient-0.5.6
 	o uim-1.4.1
 	o unix2dos-1.3
 	o upx-2.90
