@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2007/02/16 15:22:34 reinoud Exp $
+# $NetBSD: Makefile,v 1.31 2007/10/15 14:08:32 reinoud Exp $
 #
 
-DISTNAME=		UDFclient.0.5.5
-PKGNAME=		udfclient-0.5.5
+DISTNAME=		UDFclient.0.5.6
+PKGNAME=		udfclient-0.5.6
 #PKGREVISION=		1
 CATEGORIES=		misc
 MASTER_SITES=		http://www.13thmonkey.org/udfclient/releases/
