@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.29 2007/02/16 15:36:58 reinoud Exp $
+$NetBSD: distinfo,v 1.30 2007/10/15 14:08:32 reinoud Exp $
 
-SHA1 (UDFclient.0.5.5.tgz) = cb2426ab5a959b3d0c934ab29b1008795888d163
-RMD160 (UDFclient.0.5.5.tgz) = 5a2a7fd0983ffe5d2cef1da74ba8e4fef9ac2a37
-Size (UDFclient.0.5.5.tgz) = 233896 bytes
+SHA1 (UDFclient.0.5.6.tgz) = a4f09a0a48753a75f916ae37d4e54a52aced4047
+RMD160 (UDFclient.0.5.6.tgz) = f4b3fad768c9863768e9266c875d3d41bdc099fe
+Size (UDFclient.0.5.6.tgz) = 237023 bytes
